# tensorrt_dynamic_shape_slice

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: logger.hpp
weights/: test.engine
